tests/noproph/wp.stderr
error: custom attribute panicked
  --> ../tests/noproph/wp.rs:26:1
   |
26 | / #[extract_lemma(
27 | |     forall x, y.
28 | |     from { wp_ref_mut_xy(p, x, y) }
29 | |     extract { <&mut T as Ownable>::own(&mut (*x).v) }
30 | | )]
   | |__^
   |
   = help: message: need prophecise to be set

error: custom attribute panicked
  --> ../tests/noproph/wp.rs:33:1
   |
33 | / #[extract_lemma(
34 | |     forall x, y.
35 | |     from { wp_ref_mut_xy(p, x, y) }
36 | |     extract { <&mut T as Ownable>::own(&mut (*y).v) }
37 | | )]
   | |__^
   |
   = help: message: need prophecise to be set

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
error[E0277]: the trait bound `WP<T>: gilogic::prophecies::Ownable` is not satisfied
  --> ../tests/noproph/wp.rs:40:1
   |
40 | / #[with_freeze_lemma(
41 | |     lemma_name = freeze_xy,
42 | |     predicate_name = wp_ref_mut_xy,
43 | |     frozen_variables = [x, y],
44 | | )]
   | |__^ the trait `gilogic::prophecies::Ownable` is not implemented for `WP<T>`, which is required by `&'a mut WP<T>: gilogic::prophecies::Ownable`
   |
   = help: the following other types implement trait `gilogic::prophecies::Ownable`:
             &mut T
             ()
             (T, U)
             i128
             i16
             i32
             i64
             i8
           and 8 others
   = note: required for `&'a mut WP<T>` to implement `gilogic::prophecies::Ownable`
   = note: this error originates in the attribute macro `with_freeze_lemma` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `WP<T>: gilogic::prophecies::Ownable` is not satisfied
  --> ../tests/noproph/wp.rs:45:30
   |
45 | impl<T: Ownable> Ownable for WP<T> {
   |                              ^^^^^ the trait `gilogic::prophecies::Ownable` is not implemented for `WP<T>`
   |
   = help: the following other types implement trait `gilogic::prophecies::Ownable`:
             &mut T
             ()
             (T, U)
             i128
             i16
             i32
             i64
             i8
           and 8 others
note: required by a bound in `gilogic::prophecies::FrozenOwn::mut_ref_own_frozen`
  --> /Users/sacha/Prog/gillian-rust/rust-to-gil/gilogic/src/prophecies.rs:52:61
   |
52 | pub unsafe trait FrozenOwn<T: core::marker::Tuple + Sized>: Ownable + Sized {
   |                                                             ^^^^^^^ required by this bound in `FrozenOwn::mut_ref_own_frozen`
...
89 |     fn mut_ref_own_frozen(
   |        ------------------ required by a bound in this associated function

error: Predicate body failed to typecheck for DefId(0:28 ~ wp[e568]::wp_ref_mut_xy) ErrorGuaranteed(())

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
